# Cardboard

./: LICENSE  README.md  cardboard.doap  io.github.blitz2015.Cardboard.json  meson.build
data/: cardboard.gresource.xml  io.github.blitz2015.Cardboard.desktop.in  io.github.blitz2015.Cardboard.gschema.xml  io.github.blitz2015.Cardboard.metainfo.xml.in  meson.build
data/gtk/: catalog.ui  entry.ui  help-overlay.ui  preferences.ui  style.css  window.ui
src/: cardboard.in  meson.build
src/py/: catalog.py  danbooru.py  entry.py  favorites.py  main.py  media.py  preferences.py  searches.py  tab.py  tags.py  window.py
